Bug 450034 - Searching for "audio" in the launcher finds the System Settings after many applications
Summary: Searching for "audio" in the launcher finds the System Settings after many ap...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-02-11 19:19 UTC by Dan Dascalescu
Modified: 2023-11-21 04:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
Screenshot (127.25 KB, image/png)
2022-02-11 19:19 UTC, Dan Dascalescu
Details
Bug still present in KDA Plasma 5.24.7 (65.07 KB, image/png)
2023-01-25 02:01 UTC, Dan Dascalescu
Details
Plasma 5.27.8 screenshot (88.67 KB, image/png)
2023-11-21 02:21 UTC, Dan Dascalescu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dascalescu 2022-02-11 19:19:35 UTC
Created attachment 146597 [details]
Screenshot

STEPS TO REPRODUCE
1. Press Super
2. Type "audio"

OBSERVED RESULT
The first matches are applications like Spotify, VLC, video editors, and a screen recorder.

EXPECTED RESULT
The Audio in System Settings should be first.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.24
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.3
Kernel Version: 5.4.0-99-generic (64-bit)
Comment 1 Nate Graham 2022-02-15 22:10:54 UTC
Can reproduce. This was improved but not completely fixed by https://invent.kde.org/plasma/systemsettings/-/merge_requests/123.

Now an exact title match makes the search result be the first one within the set of all results from the KCM runner but I guess its weighting still isn't high enough to outweigh results from other runners.
Comment 2 Natalie Clarius 2022-10-05 18:28:43 UTC
I opened a MR: https://invent.kde.org/plasma/systemsettings/-/merge_requests/165
Comment 3 Nate Graham 2022-10-31 15:14:05 UTC
Git commit 8e8e379d954e1f1b84b1e8c89a52eb47d4780c0b by Nate Graham, on behalf of Natalie Clarius.
Committed on 31/10/2022 at 15:09.
Pushed by ngraham into branch 'master'.

runner: increase match type when kcm name or keyword exactly matches query

M  +37   -34   runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/8e8e379d954e1f1b84b1e8c89a52eb47d4780c0b
Comment 4 Dan Dascalescu 2023-01-25 02:01:53 UTC
Created attachment 155571 [details]
Bug still present in KDA Plasma 5.24.7

I still see a form of this issue in the Launcher: searching for "about" finds all sorts of other entries first, even though `About this system` has the word "about" both in the shortcut name and its description.
Comment 5 Natalie Clarius 2023-01-25 05:50:04 UTC
The bug described in the OP is fixed in Plasma 5.27.  

(In reply to Dan Dascalescu from comment #4)
> Created attachment 155571 [details]
> Bug still present in KDA Plasma 5.24.7
> 
> I still see a form of this issue in the Launcher: searching for "about"
> finds all sorts of other entries first, even though `About this system` has
> the word "about" both in the shortcut name and its description.

This is the application launcher always ranking application matches first, see https://bugs.kde.org/show_bug.cgi?id=431204.
Comment 6 Dan Dascalescu 2023-11-21 02:21:53 UTC
Created attachment 163333 [details]
Plasma 5.27.8 screenshot

I still see this in Plasma 5.27.8.

Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.6-200.fc38.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 7 Natalie Clarius 2023-11-21 04:01:40 UTC
(In reply to Dan Dascalescu from comment #6)
> Created attachment 163333 [details]
> Plasma 5.27.8 screenshot
> 
> I still see this in Plasma 5.27.8.
> 
> Operating System: Fedora Linux 38
> KDE Plasma Version: 5.27.8
> KDE Frameworks Version: 5.110.0
> Qt Version: 5.15.10
> Kernel Version: 6.5.6-200.fc38.x86_64 (64-bit)
> Graphics Platform: Wayland

See the commend above.