runner: increase match type when kcm name or keyword exactly matches query

BUG: 450034